# nix-cmake-gtk4-example

./: .gitignore  CMakeLists.txt  flake.nix
src/GUI/: CMakeLists.txt  default.nix  main.cpp
src/GUI/include/: welcomePage.hpp
src/GUI/src/: welcomePage.cpp
src/core/: CMakeLists.txt  default.nix
src/core/cmake/: coreConfig.cmake.in
src/core/include/: core.hpp
src/core/src/: core.cpp
